--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lattice-estimator"]
 	path = lattice-estimator
-	url = git@github.com:malb/lattice-estimator.git
+	url = https://github.com/malb/lattice-estimator.git
